--- a/flask_document_system/docs/templates/default_documents.html
+++ b/flask_document_system/docs/templates/default_documents.html
@@ -9,7 +9,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
   <title>Document System</title>
-  <script type="text/javascript" src="/static/js/tasks_scheduler.js"></script>
   <link rel="stylesheet" href="/static/layui/css/layui.css">
 
   <style>
@@ -28,9 +27,9 @@
     <!-- 头部区域（可配合layui已有的水平导航） -->
     <ul class="layui-nav layui-layout-left">
       <li class="layui-nav-item layui-this">
-        <a href="/docs">文档</a>
+        <a href="/">文档</a>
         <dl class="layui-nav-child">
-        <dd><a href="/docs">进入文档</a></dd>
+        <dd><a href="/">进入文档</a></dd>
         <dd><a id="submit_docs">上传文档</a></dd>
         </dl>
       </li>
@@ -144,8 +143,5 @@ layui.use(['form', 'layedit', 'laydate','element','jquery'], function() {
 
 </script>
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
-<script>
-$("#page1").load("/static/docs/download_parser.html");
-</script>
 </body>
 </html>
