--- a/flask_document_system/docs/templates/document_comment_layer.html
+++ b/flask_document_system/docs/templates/document_comment_layer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>文档重命名</title>
+<title>Comments</title>
 <link rel="stylesheet" href="/static/layui/css/layui.css" media="all">
   <style>
   .layui-input{
@@ -13,9 +13,10 @@
 <body>
 <form class="layui-form"> <!-- 提示：如果你不想用form，你可以换成div等任何一个普通元素 -->
   <div class="layui-form-item">
-    <label class="layui-form-label">输入文档重命名后的名称：</label>
+    <label class="layui-form-label">填写</label>
     <div class="layui-input-block">
-      <input id="name" type="text" name="" placeholder="请输入文档重命名后的名称" autocomplete="off" class="layui-input">
+<!--      <input id="name" type="text" name="" placeholder="请输入想输入的内容" autocomplete="off" class="layui-input">-->
+      <textarea id="name" name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
     </div>
   </div>
   <div class="layui-form-item">
@@ -33,18 +34,16 @@ layui.use('form', function(){
     var value = document.getElementById("name").value
     var $ = layui.$
     $.ajax({
-      url: "/docs/rename/"
+      url: "/docs/comment/"
       ,type: "POST"
-      ,data: {"name": value, url: window.parent.location.href}
+      ,data: {"comment": value, url: window.parent.location.href}
 
       ,success: function(result){
         if(result.result == "OK"){
-            layer.msg("重命名成功！");
+            layer.msg("提交成功！");
             var index = parent.layer.getFrameIndex(window.name); //获取窗口索引
             parent.layer.close(index);
             window.parent.location.reload();
-        }else if (data.result == '403'){
-            layer.msg("没有权限!");
         }else{
             layer.msg("出现错误!");
         }
